# Bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .railway-rebuild  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  migrate_to_polybot2.sh  nixpacks.toml  polybot-fixes-v3 (1).patch  pyproject.toml  railway.json  railway.toml  redeem_all.py  requirements.txt
.github/workflows/: ci.yml
docs/: MANUAL_AR.md  MANUAL_ES.md  MANUAL_FR.md  MANUAL_JA.md  MANUAL_KLINGON.md  MANUAL_PL.md  MANUAL_RU.md  MANUAL_SINDARIN.md  MANUAL_VALYRIAN.md  MANUAL_ZH.md
docs/images/: .gitkeep
src/polybot/: __init__.py  __main__.py  api.py  approve_usdc.py  arbitrage.py  backtest.py  backtester.py  check_wallet.py  cli.py  compounding.py  config.py  copy_trading.py  credentials_manager.py  dashboard.py  database.py  edge_engine.py  execution_logger.py  executor.py  funding.py  (+35 more)
static/: dashboard.html  modes.html
tests/: __init__.py  conftest.py  test_backtester.py  test_credentials_manager.py  test_dashboard.py  test_full_redeemer.py  test_geo.py  test_hourly_risk_regime.py  test_indicators.py  test_mode_strategies.py  test_models.py  test_onchain_executor.py  test_optimizer.py  test_pnl_tracker.py  test_production_dashboard_endpoints.py  test_proxy.py  test_redeem_all.py  test_redeem_only.py  test_redeem_stuck_positions.py  test_retries.py  test_risk_manager.py  test_rpc_manager.py  test_scanner.py  test_signal_engine.py  test_simple_trend_filter.py  test_smart_timing.py  test_solana_bridge.py  test_terminal_logger.py  test_timing_and_kelly.py  test_updown_crypto.py
(+5 files in other folders)
